[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

####################
# Project Metadata #
####################

[project]
description = 'Reusable database fixtures for any and all databases.'
license = "MIT"
name = "pytest-databases"
readme = "README.md"
requires-python = ">=3.9"
version = "0.16.0"
#
authors = [{ name = "Cody Fincher", email = "cody@litestar.dev" }]
keywords = [
  "database",
  "migration",
  "postgres",
  "mysql",
  "oracle",
  "mssql",
  "duckdb",
  "bigquery",
  "spanner",
  "alloydb",
  "alloydbomni",
  "cockroachdb",
  "redis",
  "elasticsearch",
  "azure",
  "valkey",
  "dragonflydb",
  "mongodb",
  "gizmosql",
  "flightsql",
]
# options under https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
# direct dependencies of this package
dependencies = ["pytest", "filelock", "docker"]

[project.urls]
Documentation = "https://github.com/litestar-org/pytest-databases#readme"
Issues = "https://github.com/litestar-org/pytest-databases/issues"
Source = "https://github.com/litestar-org/pytest-databases"

[project.optional-dependencies]
azure-storage = ["azure-storage-blob"]
bigquery = ["google-cloud-bigquery"]
cockroachdb = ["psycopg"]
dragonfly = ["redis"]
elasticsearch7 = ["elasticsearch7"]
elasticsearch8 = ["elasticsearch8"]
gizmosql = ["adbc-driver-flightsql", "pyarrow"]
keydb = ["redis"]
mariadb = ["mariadb"]
minio = ["minio"]
mongodb = ["pymongo"]
mssql = ["pymssql"]
mysql = ["mysql-connector-python"]
oracle = ["oracledb"]
postgres = ["psycopg>=3"]
redis = ["redis"]
spanner = ["google-cloud-spanner"]
valkey = ["valkey"]
yugabyte = ["psycopg2-yugabytedb"]

[dependency-groups]
build = ["bump-my-version"]
dev = [
  { include-group = "extra" },
  { include-group = "lint" },
  { include-group = "doc" },
  { include-group = "test" },
  { include-group = "build" },
]
doc = [
  "auto-pytabs[sphinx]>=0.5.0",
  "shibuya",
  "sphinx>=7.0.0; python_version <= \"3.9\"",
  "sphinx>=8.0.0; python_version >= \"3.10\"",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-copybutton>=0.5.2",
  "sphinx-click>=6.0.0",
  "sphinx-design>=0.5.0",
  "sphinxcontrib-mermaid>=0.9.2",
  "sphinx-paramlinks>=0.6.0",
  "sphinx-togglebutton>=0.3.2",
  "sphinx-toolbox>=3.8.1",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
]
extra = ["psycopg2-binary", "psycopg[binary,pool]", "psycopg2-yugabytedb-binary"]
lint = [
  "mypy",
  "ruff",
  "pyright",
  "pre-commit",
  "types-click",
  "types-six",
  "types-decorator",
  "types-pyyaml",
  "types-docutils",
  "types-redis",
  "types-pymysql",
  "slotscheck",
]
test = [
  "coverage[toml]>=6.2",
  "pytest",
  "pytest-cov",
  "pytest-cdist>=0.2",
  "pytest-mock",
  "pytest-click",
  "pytest-xdist",
  "pytest-sugar",
]

##################
# External Tools #
##################

[tool.bumpversion]
allow_dirty = true
commit = false
commit_args = "--no-verify"
current_version = "0.16.0"
ignore_missing_files = false
ignore_missing_version = false
message = "chore(release): bump to `v{new_version}`"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}"]
sign_tags = false
tag = false
tag_message = "chore(release): `v{new_version}`"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = 'version = "{new_version}"'
search = 'version = "{current_version}"'

[[tool.bumpversion.files]]
filename = "uv.lock"
replace = """
name = "pytest-databases"
version = "{new_version}"
"""
search = """
name = "pytest-databases"
version = "{current_version}"
"""
## Linting Tools

[tool.slotscheck]
strict-imports = false

[tool.codespell]
ignore-words-list = "alog"
skip = 'uv.lock, package-lock.json'

[tool.pyright]
exclude = ["scripts", "docs"]
include = ["src/pytest_databases", "tests"]


[tool.mypy]
disallow_untyped_defs = false
files = ["src/pytest_databases", "tests"]
follow_imports = "normal"                 # "silent" for not following
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
disable_error_code = "attr-defined"
module = "pytest_databases.docker.spanner"

[[tool.mypy.overrides]]
disable_error_code = "attr-defined"
module = "pytest_databases.docker.bigquery"

[[tool.mypy.overrides]]
disable_error_code = "attr-defined"
disallow_untyped_decorators = false
module = "tests.*"
warn_unused_ignores = false

[[tool.mypy.overrides]]
disable_error_code = ["arg-type"]
disallow_untyped_calls = false
disallow_untyped_decorators = false
module = ["docutils.nodes.*"]


[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pyodbc", "google.auth.*", "google.cloud.*", "google.protobuf.*", "googleapiclient", "googleapiclient.*"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  '__pycache__',
]
fix = true
include = ["src/**/*.py", "src/**/*.pyi", "tests/**/*.py", "tests/**/*.pyi"]
line-length = 120
lint.fixable = ["ALL"]
lint.ignore = [
  "B027",   # Allow non-abstract empty methods in abstract base classes
  "FBT003", # Allow boolean positional values in function calls, like `dict.get(... True)`
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLC1901", # empty string comparisons
  "PLW2901", # `for` loop variable overwritten
  "SIM114",  # Combine `if` branches using logical `or` operator
  "E203",    # Whitespace before :, needed for black compatability and also `ruff format`
  "ISC001",  # causes unexpected behaviour with formatter
  "E501",    # pycodestyle line too long, handled by black
  "D100",    # pydocstyle - missing docstring in public module
  "D101",    # pydocstyle - missing docstring in public class
  "D102",    # pydocstyle - missing docstring in public method
  "D103",    # pydocstyle - missing docstring in public function
  "D104",    # pydocstyle - missing docstring in public package
  "D105",    # pydocstyle - missing docstring in magic method
  "D106",    # pydocstyle - missing docstring in public nested class
  "D107",    # pydocstyle - missing docstring in __init__
  "D202",    # pydocstyle - no blank lines allowed after function docstring
  "D205",    # pydocstyle - 1 blank line required between summary line and description
  "D415",    # pydocstyle - first line should end with a period, question mark, or exclamation point
  "UP037",   # pyupgrade - removes quotes from type annotation
  "A003",    # flake8-builtins - class attribute {name} is shadowing a python builtin
  "B010",    # flake8-bugbear - do not call setattr with a constant attribute value
  "B008",    #  flake8-bugbear - Do not perform function call `Parameter` in argument defaultsRuff(B008)
  "RUF012",  # ruff - mutable class attributes should be annotated with `typing.ClassVar`
  "ANN401",  # ruff - Dynamically typed expressions (typing.Any) are disallowed
  "PLR0913", # ruff - Too many arguments to function call
  "PLR2004", # Magic value used in comparison
  "FBT001",  # Boolean typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "FBT003",  # Boolean Boolean default positional argument in function definition
  "ARG002",  # Unused method argument
  "ARG001",  # Unused function argument
  "TD002",
  "TD003",
  "FIX002",
  "PGH003",
  "RUF006",
  "RUF029",  # Ruff - Function is declared `async`, but doesn't `await` or use `async` features. # ignore
  "SLF001",
  "PT007",
  'S603',
  "E501",    # pycodestyle line too long, handled by black
  "PLW2901", # pylint - for loop variable overwritten by assignment target
  "ANN401",
  "FBT",
  "PLR0913", # too many arguments
  "PT",
  "TD",
  "PERF203", # ignore for now; investigate
  "COM812",
  "PLR0917",
  "CPY001",  # copywrite check
  "DOC201",  # `return` is not documented in docstring
  "DOC501",  # Raised exception missing from docstring
  "DOC502",  # Raised exception missing from docstring
  "A005",    # module shadows builtin
  "S608",
  "RUF067",  # __init__ module should only contain docstrings and re-exports
  "B901",    # Using `yield` and `return {value}` in a generator function can lead to confusing behavior
]
lint.select = ["ALL"]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
preview = true                                                    # preview features & checks, use with caution
src = ["src", "tests/", "docs/"]
target-version = "py39"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pytest_databases", "tests"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint.per-file-ignores]
# Allow print/pprint
"__init__.py" = ['F401', 'D104']
"__main__.py" = ["E402"]
"docs/*" = ["S404", "INP001"]
"examples/*" = ["T201"]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = [
  "PLR2004",
  "S101",
  "TID252",
  "ERA001",
  "ANN201",
  "ANN001",
  "D103",
  "D104",
  "T201",
  "S404",
  "PLR6301",
  "FA102",
]


[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

# configure in-case someone runs this
[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 120

## Testing Tools

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.md' --dist=loadgroup"
cdist-group-steal = "3:10"
cdist-justify-items = "file"
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:xdist.*",
  "ignore::DeprecationWarning:importlib._bootstrap",
]
markers = [
  "mysql: MySQL Tests",
  "postgres: Postgres Tests",
  "oracle: Oracle Tests",
  "spanner: Google Cloud Spanner Tests",
  "duckdb: DuckDB Tests",
  "mssql: Microsoft SQL Server Tests",
  "elasticsearch: Elasticsearch Tests",
  "gizmosql: GizmoSQL Tests",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
disable_warnings = ["no-data-collected", "module-not-measured", "module-not-imported"]
omit = [
  "_version.py",                          # automatically created by hatch-vcs, not in repo
  "src/pytest_databases/__metadata__.py",
  "tests/*",
  "scripts/*",
]
parallel = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]


[project.entry-points.pytest11]
pytest_databases = "pytest_databases._service"
